--- a/src/components/table.css
+++ b/src/components/table.css
@@ -1,5 +1,6 @@
 table {
     width: 70vw;
+		margin: 0 auto;
     font-size: 1.8rem;
     border-collapse: collapse;
     box-shadow: 0.5rem 0.5rem 0.5rem 0.3rem rgba(0, 0, 0, 0.2);
