--- a/src/components/Table/table.css
+++ b/src/components/Table/table.css
@@ -25,6 +25,7 @@ tbody td:last-child {
 }
 
 tbody td {
+    cursor: pointer;
     width: 20rem;
     text-overflow: ellipsis;
 }
@@ -43,5 +44,3 @@ td {
     text-align: left;
     font-size: 1.5rem;
 }
-
-
