feat: complete tasks for sorting strings

--- a/src/components/Loader/loader.css
+++ b/src/components/Loader/loader.css
@@ -8,7 +8,7 @@
 .spinner-svg {
     height: 10rem;
     width: 10rem;
-    fill: #7398ce;
+    fill: #002140;
     animation: rotate 2s infinite linear;
 }
 
