--- a/src/components/Form/form.css
+++ b/src/components/Form/form.css
@@ -5,7 +5,6 @@
 
 .form input,
 .form label {
-    /* display: block; */
     width: 100%;
 }
 
@@ -15,7 +14,6 @@
 
 .form input,
 .form select {
-    /* font: 1.8rem; */
     padding: 0.3rem;
     border-radius: 4px;
     border: 1px solid #ccc;
@@ -28,9 +26,9 @@
 
 .form-btn {
     font-size: 1.8rem;
-    background-color: #240370;
+    background-color: #002140;
     color: white;
-    border: 1px solid #240370;
+    border: 1px solid #002140;
     padding: 0.5rem 1.5rem;
     border-radius: 4px;
     cursor: pointer;
@@ -38,8 +36,8 @@
 
 .form-btn:hover,
 .form-btn:active {
-    background-color: #33059e;
-    border-color: #33059e;
+    background-color: #002140;
+    border-color: #002140;
 }
 
 .form-actions {
