--- a/src/components/Form/form.css
+++ b/src/components/Form/form.css
@@ -1,22 +1,27 @@
 .form {
     width: 100%;
+    height: 80%;
+
     font-size: 1.6rem;
 }
 
-.form input,
 .form label {
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    width: 80%;
+    height: 20%;
 }
 
-.form label {
-    margin-bottom: 0.5rem;
-}
-
-.form input,
-.form select {
-    padding: 0.3rem;
+.form input {
+    padding: 1rem;
+    outline: none;
+    background: #fff;
+    border: 1px solid #c9cacc;
+    box-sizing: border-box;
     border-radius: 4px;
-    border: 1px solid #ccc;
+    height: 40%;
+    cursor: pointer;
 }
 
 .form input:focus {
@@ -56,4 +61,9 @@
 .error {
     font-size: 1.6rem;
     color: #b40e0e;
+}
+
+.actions {
+    display: flex;
+    justify-content: space-around;
 }
