--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+.app {
+    height: 50rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .error-mesage {
     position: absolute;
     color: red;
