--- a/src/components/Pagination/pagination.css
+++ b/src/components/Pagination/pagination.css
@@ -1,9 +1,9 @@
 .pagination {
     display: flex;
     align-items: center;
-		justify-content: center;
+    justify-content: center;
     gap: 1.2rem;
-    margin-top: 3rem;
+    margin-top: 0 auto;
 }
 
 p {
