--- a/src/components/Table/table.css
+++ b/src/components/Table/table.css
@@ -1,6 +1,6 @@
 table {
     width: 70vw;
-    margin: 0 auto;
+    /* margin: 1rem auto; */
     font-size: 1.8rem;
     cursor: pointer;
     border-collapse: collapse;
@@ -35,8 +35,15 @@ td {
     font-size: 1.5rem;
 }
 
+.forms {
+    padding: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: baseline;
+}
+
 .container {
-    min-height: 80vh;
+    min-height: 90vh;
     display: flex;
     align-items: center;
     justify-content: space-between;
